Changes in version 3.1

- relay-ctrl-allow now communicates the $USER and $DOMAIN variables to
  relay-ctrl-check.  relay-ctrl-send/relay-ctrl-udp don't handle this
  yet.

- Modified the function that creates IP files to first create a new
  temporary file and rename it to ensure the last-modified timestamp is
  updated.

- Added a relay-ctrl-chdir program, to open a directory so the
  relay-ctrl-* programs can inherit the opened FD to fchdir.

- Various portability bugs fixed in the libraries.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 3.0

- Removed all CDB management code in favour of doing the check in a new
  program, relay-ctrl-check, which is a front-end to qmail-smtpd.

- Added a client-server pair for transmitting relay authorization
  information over UDP.

- All configuration information is now read from environment variables.

- Running relay-ctrl-age is no longer *required*, but still recommended.

- The RPM no longer tries to add itself to any qmail control files.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.5

- Replaced most of the defines with run-time config files.  See the man
  page for relay-ctrl-age for more details.

- Removed check for standard input and standard output being sockets to
  allow relay-ctrl-allow to be used with SSL pipes.

- Check for the "::ffff:" IPv6 address prefix before validating address.

- Rules defined in the rules file now override the generated rules,
  instead of vice versa.
-------------------------------------------------------------------------------
Changes in version 2.0

- Now supports Courier IMAP as well as qmail-popup/qmail-pop3d.