@@ -25,8 +25,7 @@ and
 variables into that file, if they are set, so that
 .B relay-ctrl-check
 can export them back into the environment.
-It then drops all setuid priviledges and executes the
-command named on the command line.
+It then executes the command named on the command line.
 .P
 If
 .I $AUTHUSER
